[gd_scene load_steps=4 format=2]

[ext_resource path="res://ItemFrame.tscn" type="PackedScene" id=1]
[ext_resource path="res://ItemShop.gd" type="Script" id=2]
[ext_resource path="res://ff-forward.tres" type="DynamicFont" id=3]

[node name="ItemShop" type="Control"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="Label" parent="."]
margin_left = 456.0
margin_top = 321.0
margin_right = 568.0
margin_bottom = 361.0
custom_fonts/font = ExtResource( 3 )
text = "Select an item"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" parent="." instance=ExtResource( 1 )]
margin_left = 336.0
margin_top = 192.0
margin_right = 336.0
margin_bottom = 192.0

[node name="Slot2" parent="." instance=ExtResource( 1 )]
margin_left = 464.0
margin_top = 192.0
margin_right = 464.0
margin_bottom = 192.0

[node name="Slot3" parent="." instance=ExtResource( 1 )]
margin_left = 592.0
margin_top = 192.0
margin_right = 592.0
margin_bottom = 192.0
